# aichat

./: CPP_IMPLEMENTATION_SUMMARY.md  FORMAL_SPEC_README.md  FRAMEWORK.md  IMPLEMENTATION_SUMMARY.md  VALIDATION_REPORT.md  architecture_overview.md  data_model.zpp  integrations.zpp  operations.zpp  system_state.zpp
cpp/: .gitignore  CMakeLists.txt  IMPLEMENTATION_NOTES.md  KERNEL_FUNCTION_MANIFEST.md  QUICKSTART.md  README.md  VALIDATION_REPORT.md
cpp/include/: aichat.h
cpp/include/aichat/: cli.h  cogloop.h  cognitive.h  kernel.h  llm.h  session.h
cpp/src/: main.cpp
cpp/src/cli/: parser.cpp  repl.cpp  session.cpp
cpp/src/cognitive/: atomspace.cpp  cogloop.cpp  ecan.cpp  esn.cpp  pln.cpp
cpp/src/kernel/: bootstrap.c  hgfs.c  memory.c  scheduler.c
cpp/src/llm/: chat.cpp  inference.cpp  llm_internal.h
cpp/tests/: CMakeLists.txt  test_cogloop.cpp  test_cognitive.cpp  test_kernel.c  test_session.cpp
docs/: GENERATION_SUMMARY.md  README.md  architecture_overview.md  formal_spec_data_model.zpp  formal_spec_integrations.zpp  formal_spec_operations.zpp  formal_spec_system_state.zpp
